2016-02-05 Fred Gleason <fredg@paravelsystems.com>
	* Refactored metadata processing so as to emit updates in realtime
	sync with audio playout.
2016-02-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a '--stats-out' option.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the --stats-out parameters for the AAC codec in
	'src/glassplayer/codec_fdk.cpp' and 'src/glassplayer/codec_fdk.h'.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Implemented --stats-out parameters for the Connector classes.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/serverid.cpp' that caused playout
	to fail with non-extended M3U lists containing multiple URLs.
2016-02-08 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'DeviceType' stat to the audio device statistics.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'Connector::hostHostname()', 'Connector::hostPort()' and
	'Connector::setError()' methods in 'src/common/connector.cpp' and
	'src/common/connector.h'.
	* Fixed a bug in 'src/glassplayer/conn_xcast.cpp' that generated a
	malformed HTTP request.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Codec::writePcm()' method in 'src/common/codec.cpp' and
	'src/common/codec.h'.
	* Removed the 'Codec::signalAudioWritten()' method in
	'src/common/codec.cpp' and 'src/common/codec.h'.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'hostname' and 'port' parameters from the
	'Connector::connectToHostConnector()' method in
	'src/common/connector.cpp' and 'src/common/connector.h'.
2016-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'File' connector in 'src/glassplayer/conn_file.cpp' and
	'src/glassplayer/conn_file.h'.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Enabled playout of local files.
2016-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a Passthrough codec in 'src/glassplayer/codec_pass.cpp' and
	'src/glassplayer/codec_pass.h'.